k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petite-maison-frontend
  namespace: petite-maison-epouvante
  labels:
    app: petite-maison-frontend
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petite-maison-frontend
  template:
    metadata:
      labels:
        app: petite-maison-frontend
        tier: frontend
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: frontend
          image: ghcr.io/obitoa2z/petite-maison-epouvante-frontend:63ecf986bcf007f2880f223bcb43a355a8e6ed1a
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
